intern/cycles/util/util_aligned_malloc.h
@@ -21,6 +21,9 @@
 
 CCL_NAMESPACE_BEGIN
 
+/* Minimum alignment needed by all CPU native data types (SSE, AVX). */
+#define MIN_ALIGNMENT_CPU_DATA_TYPES 16
+
 /* Allocate block of size bytes at least aligned to a given value. */
 void *util_aligned_malloc(size_t size, int alignment);
 
